apps/helm/nextcloud/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: nextcloud
  hostnames:
    - "nextcloud.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nextcloud
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
