apps/helm/nextcloud/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-clients
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: eg
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "80"
